# vaffelgutta

./: .gitattributes  .gitignore  .gitmodules  README.md  Test  frames_2025-03-23_15.56.18.gv  install_moveit.sh  requirements.txt  setup.sh  setup_after_interbotix.sh
DOCUMENTATION/video/: link_to_video.txt
ai/: hand_detection.py  model_learner.py  picture_maker.py  test_hand_detection.py
camera/: .npy  __init__.py  aruco.py  base.py  calibrate.py  cam.py  camera.npy  camera.py  camera_calibration.npz  camera_config_loader.py  camera_debugger.py  camera_interface.py  camera_main.py  capture_image.py  config.yaml  coordinate_system.py  coordinates.py  coordinatesystem.py  filtering.py  init_camera.py  markers.py  misc.py  plotmarkers.py  print.py  realsense.py  run_camera.sh  run_nodes.sh  runaruco.py  show_camera_test.py  show_matrix.py  touchscreen_feed.py  vision.py  vision_instance.py  vision_main.py
camera/Config/: config.yaml  misc.py
camera/Debug/: camera_debugger.py
camera/ai/: __init__.py  hand_detection.py  test_hand_detection.py
camera/calibration/: calibration.py  check_file.py  create_board.py
camera/camera_env/: pyvenv.cfg
camera/config/: config.yaml  configloader.py  misc.py
camera/debug/: camera_debugger.py  camera_id.py  test_realsense_library.py
camera/parts/: __init__.py  camera_instance.py  camera_manager.py  coordinates.py  hand_detection.py  marker_thread.py  markers.py  realsense.py
camera/rapport/: masking.py  perspective.py
collision_detection_demo/: vx300s.srdf  vx300s.urdf
collision_detection_demo/log/: latest_build
collision_detection_demo/src/env_collision_checker/: CMakeLists.txt  package.xml
collision_detection_demo/src/env_collision_checker/src/: collision_checker_helpers.cpp  collision_checker_node.cpp  moveit_python_binding.cpp
kamera/: apriltag_detection_test.py  apriltag_matrix.py  calibrate_camera.py  create_matrix_from_apriltag.py  create_matrix_from_apriltag_realtime.py  import_matrix_test.py  test_camera_connection.py  test_transformation_matrix.txt
main/: execute.py  main.py  page_connector.py  robot_controller.py  test_state.py  waffle_main.py
main/state_transitions/: 01rest.py  02home.py  03sleepstate.py  04open_iron.py  05pick_up_spray.py  06spray.py  07put_down_spray.py  08place_cup_to_stat.py  09fill_cup.py  10cup_to_iron.py  10return_ladle.py  11empty_cup.py  12return_cup.py  13close_iron.py  13open_iron2.py  14fun_time.py  14return_stick.py  15open_iron2.py  16pick_up_waffle.py  16pick_up_wafflept FloatingPointError: # unused error used as signal.t(State.ERROR).pyeturn  17serve_waffle.py  17serve_wafflept FloatingPointError: # unused error used as signal.t(State.ERROR).pyeturn  18return_stick.py  4open_iron.py  6spray.py  9fill_cup.py  __init__.py  close_iron.py  cup_to_iron.py  empty_cup.py  error.py  fill_cup.py  fun_time.py  home.py  open_iron.py  open_iron2.py  pick_up_ladle.py  (+12 more)
main_system/: execute.py  main.py
robot/: main.py  position_reader.py
robot/robot_controllers/Wafflebot/moveit/cpp_ws/: CMakeLists.txt  package.xml
robot/robot_controllers/Wafflebot/moveit/cpp_ws/log/: latest_build
robot/robot_controllers/Wafflebot/moveit/cpp_ws/src/: collision_publisher.cpp
robot_workspace/: First_robot_sim_test.py  Helicopter_robot_sim_test.py  Second_robot_sim_test.py  __init__.py  main.py  position_reader.py  robot_boot_manager.py  run.robot.py
screen/: notification_manager.py  pagecontroller.py  pages.py  screen_main.py  sidebar.py  todo.py
setup/: setup_1.sh  setup_2.sh  setup_3.sh
skjerm/: Cam.py  Debug.py  Games_tab.py  MainGUIWaffle.py  Waffle_maker.py  test.py
test_Projects/: First_robot_sim_test.py  Helicopter_robot_sim_test.py  Second_robot_sim_test.py  camera_simultaneous_test.py  copy_camera.py  first_robot_sim_test.py  gpio_test.py  helicopter_robot_sim_test.py  helloworld  helloworld.cpp  helloworld.py  jobbsoknad  malemantest.py  moveit_test.py  position_mimicer.py  ptsscounter.py  redo_recordings.py  robot_boot_manager.py  run_copy_camera.py  second_robot_sim_test.py  servo.py  temp_test.py  test_robot_movements.py  test_robot_reset.py  testcollison.py  top.py
timmy/: Timmydetector.py  hand_tracking.py
(+396 files in other folders)
